alignment fix for 576 <-> 767

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1403,7 +1403,7 @@ footer {
 	}
 	
 	.main-content {
-		margin-top: 30px;
+		margin-top: 60px;
 	}
 
 	.avatar-page-author {
